# Rust_Screenshot_API

./: .gitignore  Cargo.toml  README.md  benchmark.sh  parallel_response.json  render.html  test.json  test_urls.txt
backups/: mod.rs
docker/chrome/: Dockerfile  start.sh
docker_screenshot_api/: Cargo.toml  README.md
docker_screenshot_api/src/: main.rs
examples/: async_url_parser.rs  url_parser_cli.rs
scripts/: test_url_parser.sh
src/: docker_screenshot.rs  lib.rs  main.rs  ssl.rs
src/api/: config.rs  handlers.rs  mod.rs  models.rs  processor.rs  workers.rs
src/browser_pool/: mod.rs
src/data_classifier/: classifier.rs  mod.rs  patterns.rs
src/docker_screenshot_api/: Cargo.toml
src/screenshot/: client.rs  config.rs  mod.rs  model.rs  pool.rs  taker.rs
src/url_crawler/: mod.rs
src/url_parser/: identifier.rs  mod.rs  parser.rs  tests.rs  url_collection.rs  url_processor.rs  url_reconstructor.rs  url_validator.rs
src/utils/: anonymizer.rs  benchmarking.rs  logger.rs  mod.rs  whois.rs
test_results/: batch_results.txt  benchmark_results.txt
tests/: url_parser_test.rs
