[package]
name = "screenshot_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
base64 = "0.21.7"
chrono = "0.4.31"
fantoccini = "0.19.0"
log = "0.4.20"
sanitize-filename = "0.6.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
