[package]
name = "screenshot_api"
version = "0.1.0"
edition = "2021"

[lib]
name = "screenshot_api"
path = "src/lib.rs"

[[bench]]
name = "url_parser_bench"
harness = false

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
base64 = "0.21.7"
chrono = { version = "0.4.31", features = ["serde"] }
fantoccini = "0.19.0"
log = "0.4.20"
sanitize-filename = "0.6.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
urlencoding = "2.1.3"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
regex = "1.11.1"
once_cell = "1.21.3"
native-tls = "0.2"
x509-parser = "0.15"
whois-rust = "1.6.0"
futures = "0.3"
publicsuffix = "2.3.0"
lazy_static = "1.5.0"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
futures = "0.3"
tokio = { version = "1.35.1", features = ["full"] }
mockito = "1.7.0"
